# 01.fractal-julia

./: CMakeLists.txt  fractal_openmp.cpp  fractal_openmp.h  fractal_serial.cpp  fractal_serial.h  fractal_simd.cpp  fractal_simd.h  main.cpp  palette.cpp  palette.h
